0.10

[+] privileges lowering per export (user=username) option
[*] fixed exports parsing if there is no line break at the end of the export line

0.9

[*] new authentication mechanism

rfs:
[*] proper cache cleanup
[+] new write cache
[*] fixed bug in _rfs_write_cached() with wrong path passed to _rfs_flush()
[*] read/write cache is enabled by default

rfsd:
[+] privileges lowering (-u option)
[*] more security checks
[+] r/o exports
[*] fixed some memory leaks

0.8

[*] salt for crypt changed to empty string

rfs:
[+] write caching
[+] read caching
[+] added -ord_cache -owr_cache -ordwr_cache options to enable read/write cache
[+] added -oport option to specify server's port

rfsd:
[+] added -p and -a options to specify port and address to listen to
[*] deleting trailing '/' in export path

rfspasswd:
[*] fixed issue with ctrl-c during password prompt