@@ -15,7 +15,7 @@
 		
 		<br/><br/>
 		
-		remotefs is a network file system designed for use with NAS. Simple to use, few dependencies, reasonable security, completely in user space.
+		remotefs is a network file system designed for use with home NAS. Simple to use, few dependencies, reasonable security, completely in user space.
 		
 		<br/><br/>
 		
@@ -25,7 +25,12 @@
 		
 		<br/><br/>
 		
-		It is provided with packages for i386 Debian-based systems and partialy for MIPSEL Kamikaze-based systems (<a href="http://openwrt.org/">OpenWrt</a>). 
+		<a href="#howitworks">How it works</a><br/>
+		<a href="#howto">How-to</a>
+		
+		<br/><br/>
+		
+		It is provided with packages for i386 Debian-based systems and partialy for MIPSEL <a href="http://openwrt.org/">OpenWrt</a>-based systems.
 		See <a href="http://sourceforge.net/project/showfiles.php?group_id=229928">downloads</a> section for the list of available packages.
 		Build scripts are available in SVN (<a href="https://remotefs.svn.sourceforge.net/svnroot/remotefs">https://remotefs.svn.sourceforge.net/svnroot/remotefs</a>), so you could make packages for your platform(s) if you wish so.
 		
@@ -36,7 +41,7 @@
 
 		<br/><br/>
 		
-		How-to:
+		<a name="howto">How-to:</a>
 		
 		<br/><br/>
 		
