@@ -1,6 +1,6 @@
 #ifndef SIGNALS_SERVER_H
 #define SIGNALS_SERVER_H
 
-void install_signal_handlers();
+void install_signal_handlers_server();
 
 #endif // SIGNALS_SERVER_H
